fix map and set